--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 October 1999</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.keyasharmin.com</span></li>
+                
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://keyasharmin.github.io/</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+880 XXX XXXX</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dhaka, Bangladesh</span></li>
               </ul>
