--- a/index.html
+++ b/index.html
@@ -117,52 +117,28 @@
 
         <div class="col-lg-6">
 
-          <div class="progress">
-            <span class="skill">HTML </span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          <h6><strong>Computer Skills </strong></h6>
+          <div class="row">
+            <div class="col-lg-6">
+              <ul>
+                <li><i class="bi bi-chevron-right"></i> <strong>Programming Languages:</strong> <span> Python, Java, JavaScript</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Web Development:</strong> <span> Laravel, React, Node, Django</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Data Analysis:</strong> <span> Pandas, NumPy, Matplotlib, Seaborn</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Database Management:</strong> <span> MySQL</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Machine Learning:</strong> <span> Scikit-Learn, TensorFlow, PyTorch, Keras</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>CI/CD Tools:</strong> <span> Git, GitLab, GitHub</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Operating Systems:</strong> <span> Linux, Windows</span></li>
+              </ul>
             </div>
+            <h6><strong>Language Skills</strong></h6>
+          <div class="row">
+            <div class="col-lg-6">
+              <ul>
+                <li><i class="bi bi-chevron-right"></i> <strong>Programming Languages:</strong> <span> Python, Java, JavaScript</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Web Development:</strong> <span> Laravel, React, Node, Django</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Operating Systems:</strong> <span> Linux, Windows</span></li>
+              </ul>
           </div>
-
-          <div class="progress">
-            <span class="skill">CSS </span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">JavaScript </span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">PHP </span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">WordPress/CMS </span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Photoshop </span>
-            <div class="progress-bar-wrap">
-              
-            </div>
-          </div>
-
         </div>
 
       </div>
@@ -170,7 +146,7 @@
     </div><!-- End Skills -->
 
     <!-- ======= Interests ======= -->
-    <div class="interests container">
+    <!-- <div class="interests container">
 
       <div class="section-title">
         <h2>Interests</h2>
@@ -251,10 +227,10 @@
         </div>
       </div>
 
-    </div><!-- End Interests -->
+    </div>End Interests -->
 
     <!-- ======= Testimonials ======= -->
-    <div class="testimonials container">
+    <!-- <div class="testimonials container">
 
       <div class="section-title">
         <h2>Testimonials</h2>
@@ -274,9 +250,9 @@
               <h3>Saul Goodman</h3>
               <h4>Ceo &amp; Founder</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>End testimonial item -->
 
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -287,9 +263,9 @@
               <h3>Sara Wilsson</h3>
               <h4>Designer</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>End testimonial item -->
 
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -300,9 +276,9 @@
               <h3>Jena Karlis</h3>
               <h4>Store Owner</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>End testimonial item -->
 
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -313,9 +289,9 @@
               <h3>Matt Brandon</h3>
               <h4>Freelancer</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>End testimonial item -->
 
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -326,9 +302,9 @@
               <h3>John Larson</h3>
               <h4>Entrepreneur</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>End testimonial item -->
 
-        </div>
+        <!-- </div>
         <div class="swiper-pagination"></div>
       </div>
 
@@ -336,7 +312,7 @@
 
       </div>
 
-    </div><!-- End Testimonials  -->
+    </div>End Testimonials  -->
 
   </section><!-- End About Section -->
 
@@ -354,7 +330,14 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>Sharmin Akter Keya</h4>
-            <p><em>bleh</em></p>
+            <p><em>Software developer with a Bachelor's degree in Computer Science and Engineering from
+              BRAC University, coupled with involvement in significant research initiatives. Throughout the
+              academic tenure, led various group projects with a focus on code optimization and timely
+              project execution. Research experiences have enhanced analytical and problem-solving
+              capabilities, complementing a creative approach and dynamic communication skills. Offers a
+              blend of academic rigor, practical expertise, and research proficiency in software development
+              and project management roles.
+              </em></p>
             <p>
             <!-- <ul>
               <li>Portland par 127,Orlando, FL</li>
@@ -369,19 +352,39 @@
             <h4>Bachelor of Science in Computer Science &amp; Engineering</Em></h4>
             <h5>2019 - 2023</h5>
             <p><em>BRAC University, Dhaka, Bangladesh</em></p>
-            <p>bleh </p>
-          </div>
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul>
+                    <li><i class="bi bi-chevron-right"></i> <span> CGPA: 3.87 out of 4.00</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <span> Merit-based Scholarships (25-95%) from 4th to 12th semester</span></li>
+                  </ul>
+                </div>
+              </div>
           <div class="resume-item">
             <h4>Higher Secondary School Certificate (Science)</h4>
             <h5>2016 - 2018</h5>
             <p><em>Adamjee Cantonment College, Dhaka, Bangladesh</em></p>
-            <p>bleh</p>
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul>
+                    <li><i class="bi bi-chevron-right"></i> <span> GPA 5.00 out of 5.00 </span></li>
+                    <li><i class="bi bi-chevron-right"></i> <span> Highest academic excellence award in 2018</span></li>
+                  </ul>
+                </div>
+              </div>
           </div>
           <div class="resume-item">
             <h4>Secondary School Certificate (Science)</h4>
             <h5>2005 - 2016</h5>
             <p><em>Uttar Kafrul High School, Dhaka, Bangladesh</em></p>
-            <p>bleh</p>
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul>
+                    <li><i class="bi bi-chevron-right"></i> <span> GPA 5.00 out of 5.00 </span></li>
+                    <li><i class="bi bi-chevron-right"></i> <span> Best student award in the entire school for 6 consecutive years (2010 - 2015)</span></li>
+                  </ul>
+                </div>
+              </div>
           </div>
         </div>
         <div class="col-lg-6">
