--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
         <!-- <p>Check My Resume</p> -->
       </div>
 
-      <div class="row">
-        <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
-          <div class="resume-item pb-0">
-            <h4>Sharmin Akter Keya</h4>
+      <!-- <div class="row">
+        <div class="col-lg-6"> -->
+          <!-- <h3 class="resume-title">Sumary</h3> -->
+          <!-- <div class="resume-item pb-0"> -->
+            <!-- <h4>Sharmin Akter Keya</h4>
             <p><em>Software developer with a Bachelor's degree in Computer Science and Engineering from
               BRAC University, coupled with involvement in significant research initiatives. Throughout the
               academic tenure, led various group projects with a focus on code optimization and timely
@@ -337,54 +337,47 @@
               capabilities, complementing a creative approach and dynamic communication skills. Offers a
               blend of academic rigor, practical expertise, and research proficiency in software development
               and project management roles.
-              </em></p>
-            <p>
-            <!-- <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
-            </ul> -->
-            </p>
-          </div>
+              </em></p> -->
+<!--             
+          </div> -->
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="resume-item pb-0">
 
+          </div>
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
             <h4>Bachelor of Science in Computer Science &amp; Engineering</Em></h4>
             <h5>2019 - 2023</h5>
             <p><em>BRAC University, Dhaka, Bangladesh</em></p>
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul>
-                    <li><i class="bi bi-chevron-right"></i> <span> CGPA: 3.87 out of 4.00</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <span> Merit-based Scholarships (25-95%) from 4th to 12th semester</span></li>
-                  </ul>
-                </div>
-              </div>
+            <p>
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <span> CGPA: 3.87 out of 4.00</span></li>
+              <li><i class="bi bi-chevron-right"></i> <span> Merit-based Scholarships (25-95%) from 4th to 12th semester</span></li>
+            </ul>
+            </p>   
+          </div>
           <div class="resume-item">
             <h4>Higher Secondary School Certificate (Science)</h4>
             <h5>2016 - 2018</h5>
             <p><em>Adamjee Cantonment College, Dhaka, Bangladesh</em></p>
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul>
-                    <li><i class="bi bi-chevron-right"></i> <span> GPA 5.00 out of 5.00 </span></li>
-                    <li><i class="bi bi-chevron-right"></i> <span> Highest academic excellence award in 2018</span></li>
-                  </ul>
-                </div>
-              </div>
+            <p>
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <span> GPA 5.00 out of 5.00 </span></li>
+              <li><i class="bi bi-chevron-right"></i> <span> Highest academic excellence award in 2018</span></li>
+            </ul>
+            </p>
           </div>
           <div class="resume-item">
             <h4>Secondary School Certificate (Science)</h4>
             <h5>2005 - 2016</h5>
             <p><em>Uttar Kafrul High School, Dhaka, Bangladesh</em></p>
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul>
-                    <li><i class="bi bi-chevron-right"></i> <span> GPA 5.00 out of 5.00 </span></li>
-                    <li><i class="bi bi-chevron-right"></i> <span> Best student award in the entire school for 6 consecutive years (2010 - 2015)</span></li>
-                  </ul>
-                </div>
-              </div>
+            <p>
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <span> GPA 5.00 out of 5.00 </span></li>
+              <li><i class="bi bi-chevron-right"></i> <span> Best student award in the entire school for 6 consecutive years (2010 - 2015)</span></li>
+            </ul>
+            </p>   
           </div>
         </div>
         <div class="col-lg-6">
