--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
         <div class="text-center"><button type="submit">Send Message</button></div>
       </form>
 
-      <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+      <!-- <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
         <div class="info-box">
           <i class="bx bx-share-alt"></i>
           <h3>Also you can reach me via -</h3>
@@ -685,15 +685,20 @@
             <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
+      </div> -->
+      <br/> 
+      
+      <div class="credits">
+        <p class="copyright">
+          Copyright &copy; Sharmin Akter Keya </p>  
       </div>
-
     </div>
   </section><!-- End Contact Section -->
 
   <div class="credits">
     <p class="copyright">
-      All rights reserved by &copy; Sharmin Akter Keya </p>
-    <p class="copyright">Dhaka | Bangladesh</p> 
+      Copyright &copy; Sharmin Akter Keya </p>
+     
   </div>
 
   <!-- Vendor JS Files -->
